* Apr 18 2001

[417065] Use JAXP instead of Xerces
Rename the main Jar file from "Tapestry.jar" to "com.primix.tapestry.jar".

* Apr 9 2001 hship

Reorganize to allow Tutorial to be run directly from the top-level directory.
Ship the master Makefile (used to generate the distros, and to run the Tutorial), as well
as the Jetty configuration for the Tutorial.
Update various Jetty configurations to enable web logging to console.

* Apr 3 2001 hship

Add the 3rd party libraries to CVS.
Simplify top-level Makefile (w.r.t. 3rd party libraries).

* Mar 9 2001 hship

Adjust for CVS tree reorganization.  Start preparing for release 0.2.10.

* Feb 13 2001 hship

Replace old DevelopersGuide (in PDF format) with new DocBook-derived HTML.

* Jan 31 2001 hship

Replace old JBE documentation (in PDF format) with new DocBook-derived HTML.

* Jan 25 2001 hship

Move log4j home page to jakarta.apache.org.

* Jan 10 2001 hship

Update log4j to 1.0.

* Jan 8 2001 hship

Include log4j 0.9.1 in the full release.

* Jan 4 2001 hship

Prepare for release 0.2.8b.

* Jan 3 2001 hship

Prepare for release 0.2.8.  Also, ship doc/Tapestry.pdf in the small and
medium distributions.

* Dec 28 2000 hship

Ship ejb.jar (from the jBoss distribution); remove references to j2ee.jar.

* Dec 27 2000 hship

Now distributing Jetty 3.0.1.

* Dec 22 2000 hship

Prepare for 0.2.7.  Also, change the Makefile to automatically create a .tar.gz
of the distribution after building it.

* Dec 19 2000 hship

Update documentation to reflect use of Jetty 3.0.0 distribution.

* Nov 20 2000

Copy j2ee.jar in for compiling, but don't distribute it.

* Nov 20 2000

Update Readme to mention J2EE RI.

* Nov 20 2000

Update Readme to reflect Jetty 3.0 rc6.

* Nov 17 2000 hship

Redistribute JARs from other projects, and include licenses.

* Nov 6 2000 hship

Begin organizing things to support the distributed release.