@@ -46,7 +46,6 @@ run: default
 	$(call EXEC_JAVA,$(EXEC_CLASSPATH), \
 		-Xms128M -Xmx128M -showversion \
 		-Dcom.primix.tapestry.enable-reset-service=true \
-		-Dorg.xml.sax.parser=org.apache.xerces.parsers.SAXParser \
 		$(OTHER_EXEC_OPTS) \
 		com.mortbay.Jetty.Server jetty.xml)
 
